--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         // log($(document.querySelectorAll('span')));
         // log($('<a class="active123">2222</a>'));
             // log($('span').pushStack().end())
-            var arr = $('span').slice(0,2);
-            log(arr)
+            // var arr = $('span').slice(0,2);
+            // log(arr)
             
-            log(arr.end())
+            // log(arr.end())
+
+            log($.each())
         
     </script>
 
