--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             
             // log(arr.end())
 
-            log($.each())
+            log($('span').each(function(){
+                this.style.fontSize = '50px'
+            }))
         
     </script>
 
